# llm-query-understanding

./: .dockerignore  .gitignore  Dockerfile  mypy.ini  pyproject.toml
k8s/: deployment.yaml  pvc.yaml  service.yaml  valkey.yaml
llm_query_understand/: app.py  llm.py
scripts/: publish_gcp  publish_gcp.sh
