[project]
name = "llm-query-understand"
version = "0.1.0"
description = "Query understanding with LLM service"
authors = [
    {name = "Doug Turnbull",email = "softwaredoug@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "fastapi (>=0.115.12,<0.116.0)",
    "uvicorn (>=0.34.0,<0.35.0)",
    "transformers (>=4.50.2,<5.0.0)",
    "optimum (>=1.24.0,<2.0.0)",
    "redis (>=5.2.1,<6.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.group.dev.dependencies]
flake8 = "^7.2.0"
mypy = "^1.15.0"
ruff = "^0.11.4"
pylint = "^3.3.6"

[tool.poetry.group.slow.dependencies]
torch = ">=2.6.0,<3.0.0"
